--- a/filmes/package.json
+++ b/filmes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProjectEvent-",
+  "name": "event",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.21.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-router-dom": "^7.5.3"
   }
 }
